--- a/style.css
+++ b/style.css
@@ -34,6 +34,42 @@ a:hover {
     color: black;
 }
 
+/* the notifs */
+
+.overlay {
+  min-height: 100vh;
+  display: flex;
+  justify-content: right;
+  margin-top: 5%;
+}
+
+.overlay h2 {
+  background: rgb(104, 0, 0);
+  font-weight: 600;
+  margin: 2rem 3rem 0;
+  padding: 5px 15px;
+  text-align: center;
+  position:absolute
+}
+
+.textNotif{
+  color: white;
+  display: none;
+}
+
+/* the video */
+
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
 
 #videoWrapper{
     margin-top: 5%;
@@ -49,7 +85,6 @@ a:hover {
     font-size: 20px;
 }
 
-/* the video */
 
 #vimeo:link, #vimeo:visited{
     color: red;
