--- a/style.css
+++ b/style.css
@@ -49,12 +49,20 @@ a:hover {
   margin: 2rem 3rem 0;
   padding: 5px 15px;
   text-align: center;
-  position:absolute
+  position:absolute;
 }
 
 .textNotif{
   color: white;
   display: none;
+}
+
+#donePopup{
+  height:120px;
+  width:220px ;
+  text-align: center;
+  top: 50%;
+  left: 50%;
 }
 
 /* the video */
@@ -71,6 +79,15 @@ video {
      object-position: center;
 }
 
+.overlay h3 {
+  background: rgb(104, 0, 0);
+  font-weight: 600;
+  margin: 2rem 3rem 0;
+  padding: 5px 15px;
+  text-align: center;
+  position:absolute;
+}
+
 #videoWrapper{
     margin-top: 5%;
 }
@@ -84,6 +101,8 @@ video {
     text-align: justify;
     font-size: 20px;
 }
+
+/* post video */
 
 
 #vimeo:link, #vimeo:visited{
