--- a/style.css
+++ b/style.css
@@ -47,7 +47,25 @@ a:hover {
   background: rgb(104, 0, 0);
   font-weight: 600;
   margin: 2rem 3rem 0;
-  padding: 5px 15px;
+  padding: 15px 20px;
+  text-align: center;
+  position:absolute;
+}
+
+.overlay h2 {
+  background:darkred;
+  font-weight: 600;
+  margin: 2rem 3rem 0;
+  padding: 15px 20px;
+  text-align: center;
+  position:absolute;
+}
+
+.overlay h3 {
+  background:whitesmoke;
+  font-weight: 600;
+  margin: 2rem 3rem 0;
+  padding: 15px 20px;
   text-align: center;
   position:absolute;
 }
@@ -58,11 +76,12 @@ a:hover {
 }
 
 #donePopup{
+  color: black;
   height:120px;
-  width:220px ;
+  width:250px ;
   text-align: center;
-  top: 50%;
-  left: 50%;
+  margin-top: 15%;
+  margin-right: 40%;
 }
 
 /* the video */
